crates/lang/tests/ui/selector_bytes/fail/missing_parameter.stderr
error: expected string or byte string literal as input: unexpected end of input, expected literal
 --> tests/ui/selector_bytes/fail/missing_parameter.rs:3:16
  |
3 | const _: u32 = ink::selector_bytes!();
  |                ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `ink::selector_bytes` (in Nightly builds, run with -Z macro-backtrace for more info)
